complaining about ring definition and coset notation

--- a/Classes - Year 1/Algebra I/Homework/HW2.tex
+++ b/Classes - Year 1/Algebra I/Homework/HW2.tex
@@ -253,7 +253,7 @@ $$
 \end{align}
 Recall the Third Isomorphism Theorem. For ideals $A,B$ of a ring $R$ where $A\subseteq B$ is a subset:
 $$(i)\; B/A\text{ is an ideal of }R/A\text{ and }(ii)\;\frac{(R/A)}{(B/A)}\cong \frac{R}{B}.$$
-\textit{* Note that in normal rings without unity required, $B/A$ is actually a quotient ring since ideals are always rings. That is: $A$ is an ideal of $B$ if every ideal is a ring. That need not be true if you require rings to have unity and then $B/A$ need not be a quotient ring, but just a set of cosets. However, the resulting quotient is always a quotient ring since the set of cosets $(B/A)$ is an ideal of the quotient ring $(R/A)$. Yet another reason (a) this coset notation sucks, and (b) this ring definition sucks.*} 
+\textit{* Note that in normal rings without unity required, $B/A$ is actually a quotient ring since ideals are always rings. That is: $A$ is an ideal of $B$ if every ideal is a ring. That need not be true if you require rings to have unity and then $B/A$ need not be a quotient ring, but just a set of cosets. However, the resulting quotient is always a quotient ring since the set of cosets $(B/A)$ is an ideal of the quotient ring $(R/A)$. Yet another reason why (a) this coset notation sucks, and (b) this ring definition sucks.*} 
 
 By \textbf{Lemma 1}, $I+J$ is an ideal of $R$ since $I,J$ are ideals of $R$. Also, $I\subseteq I+J$ is a subset. Well, we can simply compute that $(I+J)/I=\{(i+j)+I\mid (i+j)\in I+J\}=\{j+I=\class[I]{j}\mid j\in J\}=\overline{J}$ by $(4)$. 
 
