--- a/Classes - Year 1/Algebra I/Homework/HW2.tex
+++ b/Classes - Year 1/Algebra I/Homework/HW2.tex
@@ -115,11 +115,6 @@
 
 
 
-
-
-
-
-
 \makeatletter
 \renewcommand*\env@matrix[1][*\c@MaxMatrixCols c]{%
   \hskip -\arraycolsep
@@ -136,7 +131,7 @@
 
 %%% Formatting: Page Header
 \newcommand{\StudentName}{Danny Banegas}
-\newcommand{\AssignmentName}{Homework 1}
+\newcommand{\AssignmentName}{Homework 2}
 \newcommand{\CourseName}{MATH 720 - Algebra I}
 
 
@@ -163,12 +158,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 1 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{prob}
-In the following problems, we investigate the relationship between integral domains and fields.
-\begin{enumerate}[label=(\alph*)]
-\item Prove that every field is an integral domain.
-\item Prove that if $R$ is a finite\footnote{meaning $|R|<\infty$} integral domain, then $R$ is a field. \tbf{Hint:} Consider the set function $a:R\to R$ given by multiplication by an element $a$ (it will not be a ring homomorphism). If $a$ is a non-zero-divisor, prove this is an injective function, and so must also be surjective since $R$ has finitely many elements.
-\item Find an example of an integral domain which is not a field.
-\end{enumerate}
+  In the following problems, we investigate the relationship between integral domains and fields.
+  \begin{enumerate}[label=(\alph*)]
+    \item Prove that every field is an integral domain.
+    \item Prove that if $R$ is a finite integral domain, then $R$ is a field. \tbf{Hint:} Consider the set function $a:R\to R$ given by multiplication by an element $a$ (it will not be a ring homomorphism). If $a$ is a non-zero-divisor, prove this is an injective function, and so must also be surjective since $R$ has finitely many elements.
+    \item Find an example of an integral domain which is not a field.
+  \end{enumerate}
 \end{prob}
 
 \begin{proof}
@@ -181,7 +176,7 @@ In the following problems, we investigate the relationship between integral doma
         &\textbf{[Onto] }a:R\hookrightarrow R \implies \text{ the domain is in bijection with its image }\implies |R|=|a(R)|\\
         &\text{and since }a(R)\subseteq R\text{ (the domain is equal to the codomain), we must have that }a(R)=R. 
     \end{align*}
-    (This image is just the orbit of $a$ in the canonical multiplicative monoid action of $R$ on itself) So then for each non-zero zero divisor $a\in R\setminus\{0\}$, $\exists x\in R$ such that $a(x)=ax=1$. That is, each non-zero zero divisor, which is just all of $R\setminus\{0\}$ is a unit. Therefore, $R$ is a commutative ring with unity and inverses for all non-zero elements, which is the definition of a field.
+    (This image is just the orbit of $a$ in the canonical multiplicative monoid action of $R$ on itself.) So then for each non-zero zero divisor $a\in R\setminus\{0\}$, $\exists x\in R$ such that $a(x)=ax=1$. That is, each non-zero zero divisor, which is just all of $R\setminus\{0\}$ is a unit. Therefore, $R$ is a commutative ring with unity and inverses for all non-zero elements, which is the definition of a field.
 
     \textbf{(c) }$\ZZ$ is an integral domain but not a field.
 
@@ -196,69 +191,89 @@ Let $I,J$ be ideals in a commutative ring $R$ such that $I+J=(1)$. Prove that $I
 \begin{proof}
     $(\subseteq)$ Recall that since $I,J$ are ideals of $R$, $ir\in I$ and $rj\in J,\;\forall i\in I,\forall j\in J,\forall r\in R$. So then for all $ij\in IJ$, we have that $(i)j\in I$ and $i(j)\in J\implies ij\in I\cap J\implies IJ\subseteq I\cap J$.
     
-    $(\supseteq)$ $I+J=\langle 1\rangle\implies \hat{i}+\hat{j}=1$ for some $\hat{i}\in I,\hat{j}\in J$. Then for all $a\in I\cap J$, $a=a(1)=(1)a=a(\hat{i}+\hat{j})=a\hat{i}+a\hat{j}\in IJ+JI=IJ,$ since communativity in $R$ implies $IJ=JI$. Therefore, $I\cap J\subseteq IJ$.
+    $(\supseteq)$ $I+J=\langle 1\rangle\implies \hat{i}+\hat{j}=1$ for some $\hat{i}\in I,\hat{j}\in J$. Then for all $a\in I\cap J$, $a=a(1)=(1)a=a(\hat{i}+\hat{j})=a\hat{i}+a\hat{j}\in IJ+JI=IJ,$ since commutativity in $R$ implies $IJ=JI$. Therefore, $I\cap J\subseteq IJ$.
 
-    Thus, $IJ=I\cap J$.
+    Thus, 
+      $$IJ=I\cap J$$.
 
 \end{proof}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 3 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
 \begin{prob}
-Let $\varphi:R\to S$ be a ring homomorphism, and let $J$ be an ideal of $S$. Prove that $I=\varphi^{-1}(J)=\{i\in R\mid \varphi(i)\in J\}$ is an ideal of $R$.
+  Let $\varphi:R\to S$ be a ring homomorphism, and let $J$ be an ideal of $S$. Prove that $I=\varphi^{-1}(J)=\{i\in R\mid \varphi(i)\in J\}$ is an ideal of $R$.
 \end{prob}
 
 \begin{proof}
-$\forall a,b\in \varphi^{-1}(J),\;\varphi(a),\varphi(b)\in J\text{ and so }\varphi(a-b)=\varphi(a)-\varphi(b)\in J.$ So then $a-b\in \varphi^{-1}(J)$ and $\varphi^{-1}(J)\leq_{+} R$.
+  $\forall a,b\in \varphi^{-1}(J),\;\varphi(a),\varphi(b)\in J\text{ and so }\varphi(a-b)=\varphi(a)-\varphi(b)\in J.$ So then $a-b\in \varphi^{-1}(J)$ and $\varphi^{-1}(J)\leq_{+} R$.
 
-Next, for any $r\in R$ and any $i\in \varphi^{-1}(J),\; \varphi(ri)=\varphi(r)\varphi(i)\in J$ and $\varphi(ir)=\varphi(i)\varphi(r)\in J$, since $J$ is an ideal of $S$. So then $ri,ir\in \varphi^{-1}(J).$
+  Next, for any $r\in R$ and any $i\in \varphi^{-1}(J),\; \varphi(ri)=\varphi(r)\varphi(i)\in J$ and $\varphi(ir)=\varphi(i)\varphi(r)\in J$, since $J$ is an ideal of $S$. So then $ri,ir\in \varphi^{-1}(J).$
 
-Thus, $\varphi^{-1}(J)$ is an ideal of $R$.
+  Thus, 
+  \begin{center}
+    If $\varphi:R\to S$ is a ring homomorphism and $J$ is an ideal of $S$, then $\varphi^{-1}(J)$ is an ideal of $R$.
+  \end{center}
 \end{proof}
 
-We prove a lemma to be used in some of the next problems.
+We prove some lemmas to be used in some of the next problems.
 \setcounter{thm}{0} % next prob is 1
 \begin{lem}
-If $I,J$ are ideals of a ring $R$, then $I+J=\{i+j\mid i\in I,j\in J\}$ is also an ideal of $R$.
+  If $I,J$ are ideals of a ring $R$, then $I+J=\{i+j\mid i\in I,j\in J\}$ is also an ideal of $R$.
 \end{lem}
 \begin{proof}
-$\forall (i_{1}+j_{1}),(i_{2}+j_{2})\in I+J,\;(i_{1}+j_{1})-(i_{2}+j_{2})=(i_{1}-i_{2})+(j_{1}-j_{2})\in I+J\implies I+J\leq_{+}R.$ Next for all $r\in R$ and all $(i+j)\in I+J,\; r(i+j)=ri+rj,(i+j)r=ir+jr\in I+J$ since $ir,ri\in I$ and $rj,jr\in J$. Therefore, $I+J$ is an ideal of $R$. 
+  $\forall (i_{1}+j_{1}),(i_{2}+j_{2})\in I+J,\;(i_{1}+j_{1})-(i_{2}+j_{2})=(i_{1}-i_{2})+(j_{1}-j_{2})\in I+J\implies I+J\leq_{+}R.$ Next for all $r\in R$ and all $(i+j)\in I+J,\; r(i+j)=ri+rj,(i+j)r=ir+jr\in I+J$ since $ir,ri\in I$ and $rj,jr\in J$. Thus, 
+  \begin{center}
+    If $I,J$ are ideals of $R$, then $I+J$ is an ideal of $R$. 
+  \end{center}
+  \end{proof}
+
+\begin{lem}
+  If $S\subseteq R$ is a subring of a ring $R$, then the inclusion mapping $\iota: S\hookrightarrow R$ defined via $\iota(s)=s$ is a ring embedding (an injective ring homomorphism).
+\end{lem}
+\begin{proof}
+  For all $a,b\in S$,
+  \begin{align*}
+      &\iota(a+b)=a+b=\iota(a)+\iota(b)\\
+      &\iota(ab)=ab=\iota(a)\iota(b)\\
+      &\iota(1_{S})=1_{S}=1_{R}\\
+      &\iota(a)=\iota(b)\implies a=b\text{ by definition.}
+  \end{align*}
 \end{proof}
-\setcounter{thm}{3} % next prob is 1
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 4 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
+\setcounter{thm}{3} % next prob is 4
 \begin{prob}
-Let $\varphi:R\to S$ be a ring homomorphism, and let $J$ be an ideal of $R$.
-\begin{enumerate}[label=(\alph*)]
-\item Prove that $\varphi(J)=\{\varphi(j)\mid j\in J\}$ need not be an ideal of $S$.
-\item Prove that if $\varphi$ is surjective, then $\varphi(J)$ is an ideal of $S$.
-\item Prove that if $\varphi$ is surjective, and $I=\ker\varphi$, then $S\cong R/I$ and if we let $\overline{J}\subseteq R/I$ be the image of $\varphi(J)$ under this isomorphism, then
-$$
-(R/I)/\overline{J}\cong R/(I+J).
-$$
-\end{enumerate}
+  Let $\varphi:R\to S$ be a ring homomorphism, and let $J$ be an ideal of $R$.
+  \begin{enumerate}[label=(\alph*)]
+    \item Prove that $\varphi(J)=\{\varphi(j)\mid j\in J\}$ need not be an ideal of $S$.
+    \item Prove that if $\varphi$ is surjective, then $\varphi(J)$ is an ideal of $S$.
+    \item Prove that if $\varphi$ is surjective, and $I=\ker\varphi$, then $S\cong R/I$ and if we let $\overline{J}\subseteq R/I$ be the image of $\varphi(J)$ under this isomorphism, then
+    $$
+    (R/I)/\overline{J}\cong R/(I+J).
+    $$
+  \end{enumerate}
 \end{prob}
 
 \begin{proof}
-\textbf{(a)} Consider $\varphi:\ZZ\to \RR$ defined by $\varphi(n)=n\in R,\;\forall n\in \ZZ.$. This is obviously a homomorphism. Now look at $2\in 2\ZZ$, which is a well-known ideal of $\ZZ$. Well, $\pi\in \RR$ but $2\pi=\pi 2\not\in \varphi(2\ZZ)=2\ZZ$. So then $\varphi(2\ZZ)$ is not an ideal and we see that the ring homomorphic image of an ideal need not be an ideal of the codomain.
+  \textbf{(a)} Consider the inclusion map $\iota:\ZZ\hookrightarrow \RR$ defined by $\iota(n)=n\in R,\;\forall n\in \ZZ.$ This is a ring embedding by \textbf{Lemma 2}. Now look at $2\in 2\ZZ$, which is a well-known ideal of $\ZZ$. Well, $\pi\in \RR$ but $2\pi=\pi 2\not\in \iota(2\ZZ)=2\ZZ$. So then $\iota(2\ZZ)$ is not an ideal and we see that the ring homomorphic image of an ideal need not be an ideal of the codomain.
 
-\textbf{(b)} For all $\varphi(a),\varphi(b)\in \varphi(J)$ with preimages $a,b\in J$, $\varphi(a)-\varphi(b)=\varphi(a-b)\in \varphi(J)$ since $a-b\in J$. Therefore $\varphi(J)\leq_{+} S$. Next, since $\varphi$ is surjective, for any $s\in S$, $\exists r\in R$ such that $s=\varphi(r)$. So then $s\varphi(a)=\varphi(r)\varphi(a)=\varphi(ra)$ and $\varphi(a)s=\varphi(a)\varphi(r)=\varphi(ar)$ which must both belong to $\varphi(J)$ since $J\subseteq R$ is an ideal $\implies ar,rs\in J$. Therefore, $\varphi(J)$ is an ideal of $S$. That is, a surjective ring homomorphic image of an ideal is in fact an ideal of the codomain.
+  \textbf{(b)} For all $\varphi(a),\varphi(b)\in \varphi(J)$ with preimages $a,b\in J$, $\varphi(a)-\varphi(b)=\varphi(a-b)\in \varphi(J)$ since $a-b\in J$. Therefore $\varphi(J)\leq_{+} S$. Next, since $\varphi$ is surjective, for any $s\in S$, $\exists r\in R$ such that $s=\varphi(r)$. So then $s\varphi(a)=\varphi(r)\varphi(a)=\varphi(ra)$ and $\varphi(a)s=\varphi(a)\varphi(r)=\varphi(ar)$ which must both belong to $\varphi(J)$ since $J\subseteq R$ is an ideal $\implies ar,rs\in J$. Therefore, $\varphi(J)$ is an ideal of $S$. That is, a surjective ring homomorphic image of an ideal is in fact an ideal of the codomain.
 
-\textbf{(c)} $\varphi$ is surjective, so by the First Isomorphism Theorem $R/\ker \varphi = R/I\cong \varphi(R)=S$ and so $S\cong R/\ker\varphi=R/I$. Let $\psi:R/I\to S$ be this pullback isomorphism. That is,
-\begin{align}
-    &\overbrace{r}^{R}\overset{\varphi}{\mapsto}\overbrace{\varphi(r)=s}^{S}\overset{\psi}{\longleftrightarrow}\overbrace{\class[I]{r}=\class[\ker \varphi]{r}}^{I=\ker \varphi}\\
-    \text{That is: }&\psi(s)=\psi(\varphi(r))=\class[I]{r}\in R/I,\;\text{ for each }s=\varphi(r)\in \varphi(R)=S\\
-    \implies &\psi(\varphi(j))=\class[I]{j}\in R/I\;\text{ for each }j\in J\\
-    \text{So let: }&\overline{J}=\psi(\varphi(J))=\{\psi(\varphi(j))=\class[I]{j}\mid j\in J\}\subseteq R/I
-\end{align}
-Recall the Third Isomorphism Theorem. For ideals $A,B$ of a ring $R$ where $A\subseteq B$ is a subset:
-$$(i)\; B/A\text{ is an ideal of }R/A\text{ and }(ii)\;\frac{(R/A)}{(B/A)}\cong \frac{R}{B}.$$
-\textit{* Note that in normal rings without unity required, $B/A$ is actually a quotient ring since ideals are always rings. That is: $A$ is an ideal of $B$ if every ideal is a ring. That need not be true if you require rings to have unity and then $B/A$ need not be a quotient ring, but just a set of cosets. However, the resulting quotient is always a quotient ring since the set of cosets $(B/A)$ is an ideal of the quotient ring $(R/A)$. Yet another reason why (a) this coset notation sucks, and (b) this ring definition sucks.*} 
+  \textbf{(c)} $\varphi$ is surjective, so by the First Isomorphism Theorem $R/\ker \varphi = R/I\cong \varphi(R)=S$ and so $S\cong R/\ker\varphi=R/I$. Let $\psi:R/I\to S$ be this pullback isomorphism. That is,
+  \begin{align}
+      &\overbrace{r}^{R}\overset{\varphi}{\mapsto}\overbrace{\varphi(r)=s}^{S}\overset{\psi}{\longleftrightarrow}\overbrace{\class[I]{r}=\class[\ker \varphi]{r}}^{I=\ker \varphi}\\
+      \text{So: }&\psi(s)=\psi(\varphi(r))=\class[I]{r}\in R/I,\;\text{ for each }s=\varphi(r)\in \varphi(R)=S\\
+      \implies &\psi(\varphi(j))=\class[I]{j}\in R/I\;\text{ for each }j\in J\\
+      \text{Now let: }&\overline{J}=\psi(\varphi(J))=\{\psi(\varphi(j))=\class[I]{j}\mid j\in J\}\subseteq R/I
+  \end{align}
+  Recall the Third Isomorphism Theorem. For ideals $A,B$ of a ring $R$ where $A\subseteq B$ is a subset:
+    $$\textcircled{\footnotesize 1}\; B/A\text{ is an ideal of }R/A\text{ and }\textcircled{\footnotesize 2}\;\frac{(R/A)}{(B/A)}\cong \frac{R}{B}.$$
+  \textit{* Note that in normal rings without unity required, $B/A$ is actually a quotient ring since ideals are always rings. That is: $A$ is an ideal of $B$ if every ideal is a ring. That need not be true if you require rings to have unity and then $B/A$ need not be a quotient ring, but just a set of cosets. However, the resulting quotient is always a quotient ring since the set of cosets $(B/A)$ is an ideal of the quotient ring $(R/A)$. Yet another reason why (a) this coset notation sucks, and (b) this ring definition sucks.*} 
 
-By \textbf{Lemma 1}, $I+J$ is an ideal of $R$ since $I,J$ are ideals of $R$. Also, $I\subseteq I+J$ is a subset. Well, we can simply compute that $(I+J)/I=\{(i+j)+I\mid (i+j)\in I+J\}=\{j+I=\class[I]{j}\mid j\in J\}=\overline{J}$ by $(4)$. 
+  By \textbf{Lemma 1}, $I+J$ is an ideal of $R$ since $I,J$ are ideals of $R$. Also, $I\subseteq I+J$ is a subset. Well, we can simply compute that $(I+J)/I=\{(i+j)+I\mid (i+j)\in I+J\}=\{j+I=\class[I]{j}\mid j\in J\}=\overline{J}$ by $(4)$. 
 
-Therefore, since $I,(I+J)$ are ideals of $R$ with $I\subseteq (I+J)$, by the Third Isomorphism Theorem we have that
-$$(i)\; \overline{J}=(I+J)/I\text{ is an ideal of $(R/I)$ and }(ii)\;\frac{(R/I)}{\overline{J}}=\frac{(R/I)}{(I+J)/I}=\cong \frac{R}{(I+J)}.$$
+  Therefore, since $I,(I+J)$ are ideals of $R$ with $I\subseteq (I+J)$, by the Third Isomorphism Theorem we have that
+    $$\textcircled{\footnotesize 1}\; \overline{J}=(I+J)/I\text{ is an ideal of $(R/I)$ and }\textcircled{\footnotesize 2}\;\frac{(R/I)}{\overline{J}}=\frac{(R/I)}{(I+J)/I}\cong \frac{R}{(I+J)}.$$
 \end{proof}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 5 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -279,6 +294,7 @@ $$
 \end{enumerate}
 \end{prob}
 
+We use the telescoping identity for (a). Will do proof later.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 6 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{prob}
